--- a/VRChat/57/1099957.html
+++ b/VRChat/57/1099957.html
@@ -78,10 +78,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="nanaji"
-        data-product-category="127" data-product-id="1099957"
-        data-product-list="market_show" data-product-price="2500"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="nanaji" data-product-category="127"
+        data-product-id="1099957" data-product-list="market_show"
+        data-product-price="2500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +125,13 @@
                             <img alt="緑紫の七草粥" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4927604/icon_image/7eccbfff-2ee9-42bd-af67-164fd5e322de_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               緑紫の七草粥
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           [VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 +
                           [リップシンクスカーフ]Ver1.1
                         </h2>
@@ -219,18 +219,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1099957"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "[VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1 | 緑紫の七草粥"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1099957"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "[VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1 | 緑紫の七草粥"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1099957"
@@ -240,7 +239,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -290,16 +289,15 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             主にVRChatでの利用を想定したオリジナル3Dモデルです。
                             ・人間+メカ+人形を混ぜた様な雰囲気のモデルになっています。
                           </p>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
