--- a/VRChat/45/1122845.html
+++ b/VRChat/45/1122845.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "minuetdoll" data-product-category="127" data-product-id=
-        "1122845" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="minuetdoll" data-product-category="127"
+        data-product-id="1122845" data-product-list="market_show"
         data-product-price="1000" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="Minuet_Doll" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5154774/icon_image/01586bd3-121e-45aa-86e4-b23d89427b97_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Minuet_Doll
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           スノードームステージ聖夜のツリー（VRCワールド版） ver1.1
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -219,18 +219,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1122845"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 | Minuet_Doll"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1122845"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 | Minuet_Doll"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1122845"
@@ -240,7 +239,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -290,8 +289,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             当モデルは、私Minuet_Dollが過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。
                             MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。
                             【MMDステージ配布】スノードームステージ 聖夜のツリー
@@ -344,8 +343,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
