--- a/VRChat/99/1105599.html
+++ b/VRChat/99/1105599.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "d-w-vr-shop" data-product-category="127" data-product-id=
-        "1105599" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="d-w-vr-shop" data-product-category=
+        "127" data-product-id="1105599" data-product-list=
+        "market_show" data-product-price="100" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,14 +104,15 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
                         <div class="u-mb-200">
                           <div class="eventname-flag">
@@ -124,8 +126,7 @@
                             </div></a>
                           </div>
                         </div>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -136,13 +137,13 @@
                             <img alt="ばーちゃる雑草庫" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5421196/icon_image/cd47f039-a04a-45ff-87cc-477c95d354e5_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               ばーちゃる雑草庫
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           3Dアバターモデル　「草場君＆影くん」(early access)
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -231,18 +232,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1105599"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "3Dアバターモデル　「草場君＆影くん」(early access) | ばーちゃる雑草庫"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1105599"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "3Dアバターモデル　「草場君＆影くん」(early access) | ばーちゃる雑草庫"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1105599"
@@ -252,7 +252,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -358,8 +358,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             　オリジナル3Dアバター、「草場君＆影くん」です。バーチャル雑草族の少年(？)の草場君とその友人、影くんはfixedjointという不思議な力によって一心同体！息ぴったりな動きをしてくれます。
                             　ユニティパッケージ化してあるため、ユニティにポン！SDKをドン！で簡単にVRCにアップデートできちゃいます！そのままアバターとして使用してもよし！パーツ追加でおしゃれもよし！改変してもよし！オプション込みで9873ポリゴンとそこそこ軽量なのでいろいろ遊べちゃいます！
                             ◇一番簡単な改変要素として、ユニティ上でオプションパーツを非表示にすることができます。対象は上着です。方法は以下の通りです。
@@ -433,8 +433,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
